fixed overflow issue

--- a/hearthstone-leaderboard-ui/src/Components/Dashboard/Board/Dashboard.module.css
+++ b/hearthstone-leaderboard-ui/src/Components/Dashboard/Board/Dashboard.module.css
@@ -26,7 +26,7 @@
     grid-template-columns: 1.4fr 1fr;
     gap: 0.5em;
     flex-grow: 1;
-    overflow: hidden;
+    overflow: visible;
 }
 
 @media only screen and (max-width: 640px) {
