--- a/hearthstone-leaderboard-ui/src/Components/Dashboard/Table/DataTable.module.css
+++ b/hearthstone-leaderboard-ui/src/Components/Dashboard/Table/DataTable.module.css
@@ -4,5 +4,5 @@
     background-color:#1e212a;
     padding: 1em;
     border-radius: 1em;
-    overflow: hidden;
+    overflow: visible;
 }
